<resources>
    <string name="app_name">Food_Planer</string>
    <string name="client_id">525296565350-g44h5vkrqd107pk2lgtd10l503la703u.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="UserName">User Name</string>
    <string name="password">Password</string>
    <string name="createAccount">Click here</string>
    <string name="Click">Click Here</string>
    <string name="register">Register</string>
    <string name="Email">Email</string>
    <string name="confirm">Confirm Password</string>
    <string name="haveAccount">Already Have Account ?</string>
    <string name="create">Create Account?</string>
    <string name="remeber">Remember Me</string>
    <string name="skip">Skip</string>
    <string name="siginin">Login</string>
    <string name="or">OR</string>
    <string name="brandName">Foodly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_fragment">profile Fragment</string>
    <string name="favourate_fragment">Favourate Fragment</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="week_meals">week meals</string>
    <string name="inspiration_of_the_day">Inspiration of the Day</string>
    <string name="random_meals">Random Meals</string>
    <string name="Search">Search By</string>
    <string name="Category">Category</string>
    <string name="Country">Country</string>
    <string name="Ingredent">Ingredent</string>
    <string name="Network">"You are not Connected in the network please check your Connectivity "</string>
    <string name="loginMessage">You are not logged in \nLogin Now</string>
    <string name="Ingredients">Ingredients</string>
    <string name="FoodName">Food Name</string>
    <string name="instructions">Instructions</string>
    <string name="Video">Meal Video</string>
    <string name="search_for_category_country_or_ingredient">Search For Category , Country or Ingredient</string>
    <string name="Favourate">Favourate</string>
    <string name="productName">Foodly</string>
    <string name="IngredientMeals">Ingredient Meals</string>
    <string name="CountriesMeals">Country Meals</string>
    <string name="search_by_meal_name">Search By Meal Name</string>
    <string name="CategoryMeals">Category Meals</string>
    <string name="ShowAnotherDay">Show Another Day</string>
    <string name="Check">Check your internet</string>
    <string name="Register">Register</string>
</resources>